[gd_scene load_steps=8 format=3 uid="uid://evn2lqlfdcgv"]

[ext_resource type="Script" path="res://Control.gd" id="1_cdwat"]
[ext_resource type="Texture2D" uid="uid://bkjf4ie245w8h" path="res://Screen Overlay Effects/blurry Blood Smear Overlay V2.png" id="2_4y546"]
[ext_resource type="Texture2D" uid="uid://bb0nxf4u4vnl0" path="res://aim reticle.png" id="3_rrteo"]
[ext_resource type="Script" path="res://Cards.gd" id="4_srtr2"]
[ext_resource type="Texture2D" uid="uid://cbwgejv1ksidj" path="res://Screen Overlay Effects/Numbers.png" id="5_i3rbi"]
[ext_resource type="Texture2D" uid="uid://cvhsmqx8lkdth" path="res://Image.jpg" id="5_uewqd"]

[sub_resource type="Curve" id="Curve_o5hhy"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.25, 0.5), 0.0, 0.0, 0, 0, Vector2(0.5, 0.75), 0.0, 0.0, 0, 0, Vector2(0.75, 0.9), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 5

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cdwat")
dmgCurve = SubResource("Curve_o5hhy")

[node name="Fullscreen Effects" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Blood" type="TextureRect" parent="Fullscreen Effects"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4y546")
expand_mode = 1

[node name="Crosshair" type="TextureRect" parent="Fullscreen Effects"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rrteo")

[node name="HPBar2" type="ColorRect" parent="Fullscreen Effects"]
layout_mode = 0
offset_top = 128.0
offset_right = 1000.0
offset_bottom = 192.0
color = Color(0.41, 0.41, 0.41, 1)

[node name="HPBar" type="ColorRect" parent="Fullscreen Effects"]
layout_mode = 0
offset_top = 128.0
offset_right = 1000.0
offset_bottom = 192.0
color = Color(1, 0, 0, 1)

[node name="Health" type="Sprite2D" parent="Fullscreen Effects/HPBar"]
modulate = Color(1, 0, 0, 1)
position = Vector2(64, -64)
scale = Vector2(8, 8)
texture = ExtResource("5_i3rbi")
hframes = 4
vframes = 4
frame = 9

[node name="Cards" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="Control" type="Control" parent="Cards"]
layout_mode = 2
script = ExtResource("4_srtr2")

[node name="Card0" type="TextureRect" parent="Cards/Control"]
layout_mode = 2
offset_left = -224.0
offset_top = -310.0
offset_right = -1.0
texture = ExtResource("5_uewqd")

[node name="Uses" type="Sprite2D" parent="Cards/Control/Card0"]
position = Vector2(32, -32)
scale = Vector2(4, 4)
texture = ExtResource("5_i3rbi")
hframes = 4
vframes = 4
frame = 15

[node name="Card1" type="TextureRect" parent="Cards/Control"]
layout_mode = 2
offset_left = -454.0
offset_top = -310.0
offset_right = -231.0
texture = ExtResource("5_uewqd")

[node name="Uses" type="Sprite2D" parent="Cards/Control/Card1"]
position = Vector2(32, -32)
scale = Vector2(4, 4)
texture = ExtResource("5_i3rbi")
hframes = 4
vframes = 4
frame = 15

[node name="Card2" type="TextureRect" parent="Cards/Control"]
layout_mode = 2
offset_left = -681.0
offset_top = -310.0
offset_right = -458.0
texture = ExtResource("5_uewqd")

[node name="Uses" type="Sprite2D" parent="Cards/Control/Card2"]
position = Vector2(32, -32)
scale = Vector2(4, 4)
texture = ExtResource("5_i3rbi")
hframes = 4
vframes = 4
frame = 15

[node name="Card3" type="TextureRect" parent="Cards/Control"]
layout_mode = 2
offset_left = -908.0
offset_top = -310.0
offset_right = -685.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("5_uewqd")

[node name="Uses" type="Sprite2D" parent="Cards/Control/Card3"]
position = Vector2(32, -32)
scale = Vector2(4, 4)
texture = ExtResource("5_i3rbi")
hframes = 4
vframes = 4
frame = 15

[node name="PauseMenu" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 2
color = Color(0, 0, 0, 0.529412)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Resume" type="Button" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
text = "Resume"

[node name="Separator" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../sensSlider")
focus_next = NodePath("../sensSlider")
focus_previous = NodePath("../Resume")
text = "Quit"

[node name="Separator2" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2

[node name="sensLabel" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Sensitivity - 100%"
horizontal_alignment = 1

[node name="sensSlider" type="HSlider" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../opaSlider")
focus_next = NodePath("../opaSlider")
focus_previous = NodePath("../Quit")
min_value = 0.01
max_value = 2.0
step = 0.01
value = 1.0

[node name="Separator3" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2

[node name="opaLabel" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Opacity - 100%"
horizontal_alignment = 1

[node name="opaSlider" type="HSlider" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../sensSlider")
focus_previous = NodePath("../sensSlider")
max_value = 1.0
step = 0.01
value = 1.0

[connection signal="pressed" from="PauseMenu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="PauseMenu/VBoxContainer/sensSlider" to="." method="_on_sens_slider_value_changed"]
[connection signal="value_changed" from="PauseMenu/VBoxContainer/opaSlider" to="." method="_on_opa_slider_value_changed"]
